--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
     <artifactId>stickypiston</artifactId>
     <name>StickyPiston</name>
 
+    <repositories>
+        <repository>
+            <id>laxio-public</id>
+            <url>https://repo.laxio.org/repository/maven-public/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.laxio.piston</groupId>
